--- a/index.html
+++ b/index.html
@@ -2,10 +2,32 @@
 <html>
 <head>
  
-    <title>Document</title>
+    <title>index</title>
 </head>
 <body>
- <h1>hi i am h1</h1>   
+ <h1>hi i am h1</h1> 
+ <H2> hi am h2</H2>
+   <!-- to add a comment  -->
+   <p>
+    go to google
+    <!-- anchor tag to link other website or file inside my project -->
+    <!-- proprites : herf put the link inside cotations  -->
+    <a href="home.html">Home</a>
+  </p>
+
+  <!-- bold text tag -->
+  <p> hi iam <b> bold tag </b> </p>
+  <p> hi iam <em> em tag </em> </p>
+  <p> hi iam <i> i tag </i> </p>
+  <p> hi iam <small> small tag</small> </p>
+  <p> hi iam <strong> strong tag </strong> </p>
+  <p> hi iam <sub> sub tag </sub> </p>
+  <p> hi iam <sup> sup tag </sup> </p>
+  <p> hi iam <ins> ins tag </ins> </p>
+  <p> hi iam <del> del tag </del > </p>
+  <p> hi iam <mark> mark tag </mark> </p>
+  
+   
 </body>
 </html>
  
