we learn about forms and css

--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
  <H2> hi am h2</H2>
    <!-- to add a comment  -->
    <p>
-    go to google
+    go to home
     <!-- anchor tag to link other website or file inside my project -->
     <!-- proprites : herf put the link inside cotations  -->
     <a href="home.html">Home</a>
+  </p>
+  <p>
+    go to google
+    <br>
+    <a href="http://www.google.com">GOOGLE</a>
   </p>
 
   <!-- bold text tag -->
@@ -26,7 +31,7 @@
   <p> hi iam <ins> ins tag </ins> </p>
   <p> hi iam <del> del tag </del > </p>
   <p> hi iam <mark> mark tag </mark> </p>
-  
+  <img src="https://i.pinimg.com/originals/c8/59/72/c8597269752fd834d4f71ceaac6642fb.jpg" alt="" width="300px">
    
 </body>
 </html>
