--- a/index.html
+++ b/index.html
@@ -4,14 +4,9 @@
  
     <title>index</title>
     <style>
-      .title{
-        color: blue;
-        background-color: brown;
-      }
-      #h3style{
-        color: blanchedalmond;
-      }
+  
     </style>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
  <h1 class="title">hi i am h1</h1> 
@@ -23,7 +18,8 @@
     go to home
     <!-- anchor tag to link other website or file inside my project -->
     <!-- proprites : herf put the link inside cotations  -->
-    <a href="home.html">Home</a>
+    <a href="./pages/home.html">Home</a>
+    <a href="./pages/table.html">table</a>
   </p>
   <p>
     go to google
