table style change

--- a/pages/table.html
+++ b/pages/table.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tabble</title>
+   
+    <title>table</title>
     <link rel="stylesheet" href="../css/table.css">
 </head>
 <body>
-    <h1>hi i am <table></table></h1>
+    <h1>Table page</h1>
 
     <table id="maintable">
         
+        <caption>
+           table data
+        </caption>
         <thead>
-            <tr id="title1">
-               <th> tabel data </th>
-            </tr>
-            <br>
-            <tr>
+           
             <th>Name</th>
             <th>age</th>
             <th>email</th>
