--- a/pages/table.html
+++ b/pages/table.html
@@ -10,11 +10,14 @@
 
     <table id="maintable">
         
-        <caption>
+        <!-- <caption>
            table data
-        </caption>
-        <thead>
-           
+        </caption> -->
+        <thead >
+            <tr >
+                <th colspan="4">Table data</th>
+            </tr>
+           <tr>
             <th>Name</th>
             <th>age</th>
             <th>email</th>
