--- a/index.html
+++ b/index.html
@@ -1,48 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
- 
-    <title>index</title>
-    <style>
-  
-    </style>
+
+    <title>Home</title>
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
- <h1 class="title">hi i am h1</h1> 
- <H2 class="title"> hi am h2</H2>
- <h3 class="title" id="h3style">hi i am h3</h3>
- <h4 class="title">hi iam h4</h4>
-   <!-- to add a comment  -->
-   <p>
-    go to home
-    <!-- anchor tag to link other website or file inside my project -->
-    <!-- proprites : herf put the link inside cotations  -->
-    <a href="./pages/home.html">Home</a>
-    <a href="./pages/table.html">table</a>
-  </p>
-  <p>
-    go to google
-    <br>
-    <a href="http://www.google.com" target="_blank">GOOGLE</a>
-  </p>
+  <!-- header div -->
+  <div id="headerDiv">
+    <img src="./media/logo1.jfif" alt="logo">
+    <h1>Home Page</h1>
+    <a href="">Home</a>
+    <a href="">Skills</a>
+    <a href="">Contact</a>
+    <a href="">About</a>
+    <a href="">service</a>
 
-  <!-- bold text tag -->
-  <p class="title"> hi iam <b> bold tag </b> </p>
-  <p class="title"> hi iam <em> em tag </em> </p>
-  <p class="title"> hi iam <i> i tag </i> </p>
-  <p class="title"> hi iam <small> small tag</small> </p>
-  <p class="title"> hi iam <strong> strong tag </strong> </p>
-  <p class="title"> hi iam <sub> sub tag </sub> </p>
-  <p class="title"> hi iam <sup> sup tag </sup> </p>
-  <p class="title"> hi iam <ins> ins tag </ins> </p>
-  <p class="title"> hi iam <del> del tag </del > </p>
-  <p class="title"> hi iam <mark> mark tag </mark> </p>
- 
-  <img src="https://i.pinimg.com/originals/c8/59/72/c8597269752fd834d4f71ceaac6642fb.jpg" alt="" width="300px">
-  <br>
-  <br>
-  <button style="color:brown; background-color: blanchedalmond;padding: 50px;margin: 50px;"> hi am button</button>
+    
+
+  </div>
+  <!-- main div -->
+  <div id="mainDiv">
+
+  </div>
+  <!-- footer div -->
+  <div id="footerDiv">
+
+  </div>
 </body>
 </html>
  
