added new pages and modified readme file

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <div id="headerDiv">
     <img src="./media/logo1.jfif" alt="logo">
     <h1>Home Page</h1>
-    <a href="">Home</a>
-    <a href="">Skills</a>
-    <a href="">Contact</a>
-    <a href="">About</a>
-    <a href="">service</a>
+    <a href="./index.html">Home</a>
+    <a href="./pages/skills.html">Skills</a>
+    <a href="./pages/contact.html">Contact</a>
+    <a href="./pages/about.html">About</a>
+    <a href="./pages/services.html">service</a>
 
     
 
@@ -25,7 +25,7 @@
   </div>
   <!-- footer div -->
   <div id="footerDiv">
-      <P>@ All </P>
+      <P>@ All right reserved By Maram </P>
   </div>
 </body>
 </html>
