index file was modified

--- a/pages/about.html
+++ b/pages/about.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 
-    <title>Home</title>
-    <link rel="stylesheet" href="../css/skills.css">
+    <title>about</title>
+    <link rel="stylesheet" href="../css/HeaderAndFooter.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <!-- header div -->
