--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
 
     <title>Home</title>
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="../css/HeaderAndFooter.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <!-- header div -->
   <div id="headerDiv">
+    
     <img src="./media/logo1.jfif" alt="logo">
     <h1>Home Page</h1>
     <a href="./index.html">Home</a>
@@ -16,7 +18,7 @@
     <a href="./pages/about.html">About</a>
     <a href="./pages/services.html">service</a>
 
-    
+   
 
   </div>
   <!-- main div -->
