--- a/pages/services.html
+++ b/pages/services.html
@@ -32,8 +32,9 @@
 <html>
 <head>
 
-    <title>Home</title>
-    <link rel="stylesheet" href="../css/skills.css">
+    <title>service</title>
+    <link rel="stylesheet" href="../css/HeaderAndFooter.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <!-- header div -->
