--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 
     <title>Home</title>
+    
     <link rel="stylesheet" href="../css/HeaderAndFooter.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -10,14 +11,20 @@
   <!-- header div -->
   <div id="headerDiv">
     
-    <img src="./media/logo1.jfif" alt="logo">
-    <h1>Home Page</h1>
-    <a href="./index.html">Home</a>
-    <a href="./pages/skills.html">Skills</a>
-    <a href="./pages/contact.html">Contact</a>
-    <a href="./pages/about.html">About</a>
-    <a href="./pages/services.html">service</a>
-
+      <img src="./media/logo1.jfif" alt="logo">
+      <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbox"></label>
+         <i class="fas fa-bars"></i>
+        <h1>Home Page</h1>
+        <ul>
+         <li> <a href="./index.html">Home</a></li>
+         <li> <a href="./pages/skills.html">Skills</a></li>
+         <li> <a href="./pages/contact.html">Contact</a></li>
+         <li> <a href="./pages/about.html">About</a></li>
+         <li> <a href="./pages/services.html">service</a></li>
+        </ul>
+      </nav>
    
 
   </div>
