--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
   <div id="headerDiv">
     
       <img src="./media/logo1.jfif" alt="logo">
-      <nav>
+      <!-- <nav>
         <input type="checkbox" id="check">
         <label for="check" class="checkbox"></label>
-         <i class="fas fa-bars"></i>
+         <i class="fas fa-bars"></i> -->
         <h1>Home Page</h1>
-        <ul>
-         <li> <a href="./index.html">Home</a></li>
-         <li> <a href="./pages/skills.html">Skills</a></li>
-         <li> <a href="./pages/contact.html">Contact</a></li>
-         <li> <a href="./pages/about.html">About</a></li>
-         <li> <a href="./pages/services.html">service</a></li>
-        </ul>
-      </nav>
+        <div id="linkDiv">
+          <a href="./index.html">Home</a></li>
+          <a href="./pages/skills.html">Skills</a>
+          <a href="./pages/contact.html">Contact</a>
+          <a href="./pages/about.html">About</a>
+          <a href="./pages/services.html">service</a>
+        </div>
+         
+      <!-- </nav> -->
    
 
   </div>
