--- a/pages/skills.html
+++ b/pages/skills.html
@@ -11,14 +11,13 @@
   <div id="headerDiv">
     <img src="../media/logo1.jfif" alt="logo">
     <h1>Skills </h1>
-    <a href="../index.html">Home</a>
-    <a href="./skills.html">Skills</a>
-    <a href="./contact.html">Contact</a>
-    <a href="./about.html">About</a>
-    <a href="./services.html">service</a>
-
-    
-
+    <div id="linkDiv">
+      <a href="../index.html">Home</a>
+      <a href="./skills.html">Skills</a>
+      <a href="./contact.html">Contact</a>
+      <a href="./about.html">About</a>
+      <a href="./services.html">service</a>
+    </div>
   </div>
   <!-- main div -->
   <div id="mainDiv">
