--- a/pages/services.html
+++ b/pages/services.html
@@ -2,22 +2,22 @@
 <html>
 <head>
 
-    <title>Home</title>
-    <link rel="stylesheet" href="../css/skills.css">
+    <title>services</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/HeaderAndFooter.css">
 </head>
 <body>
   <!-- header div -->
   <div id="headerDiv">
     <img src="./media/logo1.jfif" alt="logo">
-    <h1>Skills </h1>
-    <a href="../index.html">Home</a>
-    <a href="./skills.html">Skills</a>
-    <a href="./contact.html">Contact</a>
-    <a href="./about.html">About</a>
-    <a href="./services.html">service</a>
-
-    
-
+    <h1>services </h1>
+    <div id="linkDiv">
+      <a href="../index.html">Home</a>
+      <a href="./skills.html">Skills</a>
+      <a href="./contact.html">Contact</a>
+      <a href="./about.html">About</a>
+      <a href="./services.html">service</a>
+    </div>
   </div>
   <!-- main div -->
   <div id="mainDiv">
@@ -40,15 +40,14 @@
   <!-- header div -->
   <div id="headerDiv">
     <img src="../media/logo1.jfif" alt="logo">
-    <h1>Service</h1>
-    <a href="../index.html">Home</a>
-    <a href="./skills.html">Skills</a>
-    <a href="./contact.html">Contact</a>
-    <a href="./about.html">About</a>
-    <a href="./services.html">service</a>
-
-    
-
+    <h1> Service </h1>
+    <div id="linkDiv">
+      <a href="../index.html">Home</a>
+      <a href="./skills.html">Skills</a>
+      <a href="./contact.html">Contact</a>
+      <a href="./about.html">About</a>
+      <a href="./services.html">service</a>
+    </div>
   </div>
   <!-- main div -->
   <div id="mainDiv">
