index.html was modified

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div id="footerDiv">
       <P>@ All right reserved By Maram </P>
   </div>
-  <script src="../js/index.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 </html>
  
