--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Home</title>
     
     <link rel="stylesheet" href="./css/HeaderAndFooter.css">
+    <link rel="stylesheet" href="./css/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -28,6 +29,39 @@
   </div>
   <!-- main div -->
   <div id="mainDiv">
+    <div class="gridDiv">
+      <div>
+        <img  class="gridImg "src="./media/grid/c++.png" alt="">
+      <p class="gridP">C++ Language</p>
+      <button class="gridButton" type="submit">learn course</button>
+      </div>
+      <div>
+        <img  class="gridImg "src="./media/grid/Csharp.svg" alt="">
+        <p class="gridP" >C# Language</p>
+        <button class="gridButton" type="submit">learn course</button>
+      </div>
+       <div><img  class="gridImg "src="./media/grid/Java_programming_language_logo.svg.png" alt="">
+        <p class="gridP">Javascript Language</p>
+        <button class="gridButton" type="submit">learn course</button>
+      </div>
+      <div>
+        <img  class="gridImg "src="./media/grid/php.png" alt="">
+      <p class="gridP">PhP Language</p>
+      <button class="gridButton" type="submit">learn course</button>
+      </div>
+      <div>
+        <img  class="gridImg "src="./media/grid/Python-logo-notext.svg.png" alt="">
+      <p class="gridP"> Python Language</p>
+      <button class="gridButton" type="submit">learn course</button>
+      </div>
+      <div>
+        <img  class="gridImg "src="./media/grid/ruby.png" alt="">
+      <p class="gridP">Ruby Language</p>
+      <button  class="gridButton" >learn course</button>
+      </div>
+      
+
+    </div>
 
   </div>
   <!-- footer div -->
