index.css was modified and grid was made

--- a/index.html
+++ b/index.html
@@ -30,31 +30,32 @@
   <!-- main div -->
   <div id="mainDiv">
     <div class="gridDiv">
-      <div>
+      <div class="innerDiv">
         <img  class="gridImg "src="./media/grid/c++.png" alt="">
       <p class="gridP">C++ Language</p>
       <button class="gridButton" type="submit">learn course</button>
       </div>
-      <div>
+      <div class="innerDiv">
         <img  class="gridImg "src="./media/grid/Csharp.svg" alt="">
         <p class="gridP" >C# Language</p>
         <button class="gridButton" type="submit">learn course</button>
       </div>
-       <div><img  class="gridImg "src="./media/grid/Java_programming_language_logo.svg.png" alt="">
+       <div class="innerDiv">
+        <img  class="gridImg "src="./media/grid/Java_programming_language_logo.svg.png" alt="">
         <p class="gridP">Javascript Language</p>
         <button class="gridButton" type="submit">learn course</button>
       </div>
-      <div>
+      <div class="innerDiv">
         <img  class="gridImg "src="./media/grid/php.png" alt="">
       <p class="gridP">PhP Language</p>
       <button class="gridButton" type="submit">learn course</button>
       </div>
-      <div>
+      <div class="innerDiv">
         <img  class="gridImg "src="./media/grid/Python-logo-notext.svg.png" alt="">
       <p class="gridP"> Python Language</p>
       <button class="gridButton" type="submit">learn course</button>
       </div>
-      <div>
+      <div class="innerDiv">
         <img  class="gridImg "src="./media/grid/ruby.png" alt="">
       <p class="gridP">Ruby Language</p>
       <button  class="gridButton" >learn course</button>
