js file was modified to make switch button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
           <a href="./pages/skills.html">Skills</a>
           <a href="./pages/contact.html">Contact</a>
           <a href="./pages/about.html">About</a>
-          <a href="./pages/services.html">service</a>
+          <a href="./pages/services.html">service</a> 
+          <label class="switch">
+            <input onclick="changeBackground()" type="checkbox">
+            <span class="slider round"></span>
+          </label>
         </div>
          
       
