--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <link rel="stylesheet" href="./css/HeaderAndFooter.css">
     <link rel="stylesheet" href="./css/index.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=500, initial-scale=1" />
 </head>
 <body>
   <!-- header div -->
