--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>
   <!-- footer div -->
   <div id="footerDiv">
-      <P>@ All right reserved By Maram </P>
+      <P id="footerP">@ All right reserved By Maram </P>
   </div>
   <script src="./js/index.js"></script>
 </body>
