--- a/pages/services.html
+++ b/pages/services.html
@@ -40,13 +40,17 @@
   <!-- header div -->
   <div id="headerDiv">
     <img src="../media/logo1.jfif" alt="logo">
-    <h1> Service </h1>
+    <h1 id="h1Id"> Service </h1>
     <div id="linkDiv">
       <a href="../index.html">Home</a>
       <a href="./skills.html">Skills</a>
       <a href="./contact.html">Contact</a>
       <a href="./about.html">About</a>
       <a href="./services.html">service</a>
+      <label class="switch">
+        <input onclick="changeBackground()" type="checkbox">
+        <span class="slider round"></span>
+      </label>
     </div>
   </div>
   <!-- main div -->
@@ -55,7 +59,8 @@
   </div>
   <!-- footer div -->
   <div id="footerDiv">
-      <P>@ All right reserved By Maram </P>
+      <P id="footerP">@ All right reserved By Maram </P>
   </div>
+  <script src="../js/index.js"></script>
 </body>
 </html>
