register.html and login.html was added

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           <a href="./index.html">Home</a>
           <a href="./pages/skills.html">Skills</a>
           <a href="./pages/contact.html">Contact</a>
-          <a href="./pages/about.html">About</a>
-          <a href="./pages/services.html">service</a> 
+          <a href="./pages/login.html">Login</a>
+          <a href="./pages/register.html">Register</a> 
           <label class="switch">
             <input onclick="changeBackground()" type="checkbox">
             <span class="slider round"></span>
