--- a/pages/login.html
+++ b/pages/login.html
@@ -2,16 +2,15 @@
 <html>
 <head>
 
-    <title>contact</title>
+    <title>Login</title>
     <link rel="stylesheet" href="../css/HeaderAndFooter.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/contact.css">
 </head>
 <body>
   <!-- header div -->
   <div id="headerDiv">
     <img src="../media/logo1.jfif" alt="logo">
-    <h1 id="h1Id">Contact</h1>
+    <h1 id="h1Id"> Login </h1>
     <div id="linkDiv">
       <a href="../index.html">Home</a>
       <a href="./skills.html">Skills</a>
@@ -26,25 +25,12 @@
   </div>
   <!-- main div -->
   <div id="mainDiv">
-       <form id="contactForm" action="">
-           <label for="name">Name</label>
-           <input type="text" name="name" id="name">
 
-           <label for="email">Email</label>
-           <input type="email" name="email" id="email">
-
-           <label for="subject">subject</label>
-           <input type="text" name="subject" id="subject">
-
-           <input type="submit">
-       </form>
   </div>
   <!-- footer div -->
   <div id="footerDiv">
-      <P id="footerp">@ All right reserved By Maram </P>
+      <P id="footerP">@ All right reserved By Maram </P>
   </div>
   <script src="../js/index.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="../js/contact.js"></script>
 </body>
 </html>
