--- a/pages/skills.html
+++ b/pages/skills.html
@@ -15,8 +15,8 @@
       <a href="../index.html">Home</a>
       <a href="./skills.html">Skills</a>
       <a href="./contact.html">Contact</a>
-      <a href="./about.html">About</a>
-      <a href="./services.html">service</a>
+      <a href="./login.html">login</a>
+      <a href="./register.html">register</a>
       <label class="switch">
         <input onclick="changeBackground()" type="checkbox">
         <span class="slider round"></span>
