--- a/pages/about.html
+++ b/pages/about.html
@@ -16,7 +16,7 @@
       <a href="./skills.html">Skills</a>
       <a href="./contact.html">Contact</a>
       <a href="./about.html">About</a>
-      <a href="./services.html">service</a>
+      <a href="./register.html">Register</a>
       <label class="switch">
         <input onclick="changeBackground()" type="checkbox">
         <span class="slider round"></span>
